# haskellbook-code

./: README.md
book/chap01/: 01-06-Equivalence.md  01-11-Exercises.md
book/chap02/: 02-02-SayHello.hs  02-05-ComprehensionCheck.hs  02-07-Learn.hs  02-10-LetAndWhere.hs  02-11-Exercises.hs
book/chap03/: 03-03-Print1.hs  03-03-Print2.hs  03-03-Print3.hs  03-04-TopOrLocal.hs  03-05-SyntaxErrors.hs  03-06-Print3aFlipped.hs  03-06-Print3bBroken.hs  03-06-Print3cUnbroken.hs  03-08a-ReadingSyntax.hs  03-08b-BuildingFunctions.hs  03-08c-Reverse.hs
book/chap04/: 04-03-MoodSwing.hs  04-06-GreetIfCool.hs  04-09a-Exercises.hs  04-09b-CorrectingSyntax.hs  04-09c-FunctionTypes.hs
book/chap05/: 05-04-TypeArguments.hs  05-05-Parametricity.hs  05-06a-TypeInference.hs  05-06b-ApplyYourself.hs  05-08a-DetermineTheType.hs  05-08b-DoesItCompile.hs  05-08c-TypeVariables.hs  05-08d-TypeSignature.hs  05-08e-FunctionForType.hs  05-08f-Sing1.hs  05-08g-Sing2.hs  05-08h-Arith3broken.hs  05-08i-TypeKwonDo.hs
book/chap06/: 06-05a-Trivial.hs  06-05b-Date.hs  06-05c-Identity.hs  06-05d-EqInstances.hs  06-08-WillTheyWork.hs  06-12a-Numberish.hs  06-12b-NumberishWithDefault.hs  06-14a-MultipleChoice.hs  06-14b-DoesItTypecheck.hs  06-14c-GivenDatatypeDeclaration.hs  06-14d-MatchTheTypes.hs  06-14e-TypeKwonDoTwo.hs
book/chap07/: 07-03-GrabBag.hs  07-04a-RegisteredUser1.hs  07-04b-RegisteredUser2.hs  07-04c-Penguins.hs  07-04d-TupleFunctions.hs  07-04e-VarietyPack.hs  07-05-CasePractise.hs  07-06a-Employees1.hs  07-06b-Employees2.hs  07-06c-ArtfulDodgy.hs  07-07-GuardDuty.hs  07-09a-Arith2.hs  07-09b-Arith3.hs  07-11a-MultipleChoice.hs  07-11b-WriteCode.hs
book/chap08/: 08-06a-ReviewTheTypes.hs  08-06b-Currying.hs  08-06c-Recursion.hs  08-06d-DividedBy.hs  08-06e-McCarthy91.hs  08-06f-WordNumber.hs
book/chap09/: 09-05-EnumFromTo.hs  09-06a-MyWords.hs  09-06b-PoemLines.hs  09-06c-Separate.hs  09-07a-ComprehendThyLists.hs  (+9 more)
book/chap13/13-09-hangman/: hangman.cabal
book/chap13/13-09-hangman/app/: Main.hs
book/chap13/13-09-hangman/src/: HangmanLib.hs  ex1HangmanGameLogic.hs
book/chap13/13-09-hangman/test/: Spec.hs
book/chap14/14-03-addition/: Addition.hs  addition.cabal
(+153 files in other folders)
