name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Implements the game Hangmen
homepage:            Not on github (https://github.com/githubuser/hangman#readme)
license:             BSD3
license-file:        LICENSE
author:              Hermann Hueck
maintainer:          hermann.hueck@example.com
copyright:           2017 Hermann Hueck
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

library
  hs-source-dirs:      src
  exposed-modules:     HangmanLib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split

executable hangman
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hangman
                     , random
                     , split

test-suite hangman-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hangman
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
